# calculator

./: .clang-format  CMakeLists.txt  conanfile.txt
.github/workflows/: test.yml
test/: CMakeLists.txt  test.cpp  test2.cpp
